exports[`incrementScore creates an action with the provided mark as payload 1`] = `
Object {
  "payload": "●",
  "type": "score:increment",
}
`;

exports[`incrementScore creates an action with the provided mark as payload 2`] = `
Object {
  "payload": "✖",
  "type": "score:increment",
}
`;

exports[`incrementScore creates an action with the provided mark as payload 3`] = `
Object {
  "payload": "✓",
  "type": "score:increment",
}
`;
